--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -5,7 +8,9 @@
 
 @theme {
   --color-primary-500:oklch(87.83% 0.184 132.98);
+  --font-roboto:"Roboto", sans-serif;;
 }
+
 
 :root {
   --radius:0.625rem;
@@ -113,5 +118,13 @@
   --color-sidebar-accent-foreground:var(--sidebar-accent-foreground);
   --color-sidebar-border:var(--sidebar-border);
   --color-sidebar-ring:var(--sidebar-ring);
+ 
+  --font-lato: "Lato", sans-serif
+}
+
+@layer utility {
+  .serviceCard:hover {
+    @apply border-primary-500  translate-y-[-8px] ;
+  }
 }
 
