--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
-@theme {
-  --color-primary-500:oklch(87.83% 0.184 132.98);
-  --color-secondary-500:#00EFFF;
-  --font-roboto:"Roboto", sans-serif;;
-}
+
 
 
 :root {
@@ -119,13 +115,33 @@
   --color-sidebar-accent-foreground:var(--sidebar-accent-foreground);
   --color-sidebar-border:var(--sidebar-border);
   --color-sidebar-ring:var(--sidebar-ring);
- 
-  --font-lato: "Lato", sans-serif
+  --color-primary-500:#5dd623;
+  --color-secondary-500:#00EFFF;
+  --color-foreground-500:#f8f8f8;
+  --color-background-500:#0f0f0f;
+  --animate-fade: fade 1.5s ease-out forwards;
+  @keyframes fade {
+    0% {
+      transform: scale(0.8);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+  }
+
+  --font-lato: "Lato", sans-serif;
+}
+@layer base {
+  .font-montserrat {
+    font-family: var(--font-montserrat), sans-serif;
+  }
 }
 
 @layer utility {
   .serviceCard:hover {
-    @apply border-[#1aa3a3]  translate-y-[-8px] ;
+    @apply border-white/60 translate-y-[-4px] bg-[#202020];
   }
 }
 
