--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,7 @@
   --color-foreground-500:#f8f8f8;
   --color-background-500:#0f0f0f;
   --animate-fade: fade 1.5s ease-out forwards;
+  --animate-scroll:scroll 10s linear infinite;
   @keyframes fade {
     0% {
       transform: scale(0.8);
@@ -129,9 +130,16 @@
       transform: scale(1.1);
       opacity: 1;
     }
-  }
+  };
 
-  --font-lato: "Lato", sans-serif;
+  @keyframes scroll {
+    0%, {
+      transform:translateX(0%);
+    }
+    100% {
+      transform:translateX(-50%);
+    }
+  }
 }
 @layer base {
   .font-montserrat {
